--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/chucklesSR/GraphQL-test#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
